feat(auth): add method for get auth user, normalize common dto
