# src/auth/dto/auth-tokens-response.dto.ts
@@ -1,6 +1,6 @@
 import { ApiProperty } from '@nestjs/swagger';
 
-export class RefreshResponseDto {
+export class AuthTokensResponseDto {
   @ApiProperty()
   accessToken: string;
 
