# src/auth/dto/index.ts
@@ -1,6 +1,4 @@
+export { AuthTokensResponseDto } from './auth-tokens-response.dto';
 export { LoginDto } from './login.dto';
-export { LoginResponseDto } from './login-response.dto';
-export { RefreshDto } from './refresh.dto';
-export { RefreshResponseDto } from './refresh-response.dto';
+export { RefreshTokenDto } from './refresh-token.dto';
 export { RegisterDto } from './register.dto';
-export { RegisterResponseDto } from './register-response.dto';
