# src/auth/dto/login-response.dto.ts
@@ -1,13 +1,0 @@
-import { UserResponseDto } from '@app/users/dto';
-import { ApiProperty } from '@nestjs/swagger';
-
-export class LoginResponseDto {
-  @ApiProperty()
-  accessToken: string;
-
-  @ApiProperty()
-  refreshToken: string;
-
-  @ApiProperty({ type: UserResponseDto })
-  user: UserResponseDto;
-}
