# src/auth/dto/refresh-token.dto.ts
@@ -1,7 +1,7 @@
 import { ApiProperty } from '@nestjs/swagger';
 import { IsJWT, IsNotEmpty } from 'class-validator';
 
-export class RefreshDto {
+export class RefreshTokenDto {
   @ApiProperty()
   @IsJWT()
   @IsNotEmpty()
