# src/auth/dto/register-response.dto.ts
@@ -1,7 +1,0 @@
-import { UserResponseDto } from '@app/users/dto';
-import { ApiProperty } from '@nestjs/swagger';
-
-export class RegisterResponseDto {
-  @ApiProperty({ type: UserResponseDto })
-  user: UserResponseDto;
-}
